--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@
   font-family: 'Oswald', sans-serif;
   line-height: 1;
   background: #f7f7f7;
-  box-shadow: 1px 1px 0 #df7002, 2px 2px 0 #df7002, 3px 3px 3px rgba(0, 0, 0, 0.35);
+  box-shadow: 1px 1px 0 #df7002, 2px 2px 0 #E89917, 3px 3px 3px rgba(0, 0, 0, 0.35);
 }
 #cssmenu > ul {
   background: url('images/bg.png');
