--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Oswald);
+@import url(http://fonts.googleapis.com/css?family=Ultra);
 #cssmenu,
 #cssmenu ul,
 #cssmenu ul li,
